Use 100svh instead of 100vh to avoid scrolling the page on mobile phones

--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -10,11 +10,11 @@
 }
 
 body {
-    height: 100vh;
+    height: 100svh;
 }
 
 #root {
-    height: 100vh;
+    height: 100svh;
     white-space: pre-wrap;
 }
 
